--- a/views/EditSongPanel.ejs
+++ b/views/EditSongPanel.ejs
@@ -333,9 +333,9 @@
             SectionNames:`<%- CurrentSongData.SectionNames %>`,
             SectionNamesValue:`<%- CurrentSongData.SectionNamesValue %>`,
             StrummingPatterns:`<%- CurrentSongData.StrummingPatterns %>`,
-            TimeSignatureBottomValue:`<%- CurrentSongData.AdvancedMode %>`,
-            TimeSignatureTopValue:`<%- CurrentSongData.AdvancedMode %>`,
-            TransposeKey:`<%- CurrentSongData.AdvancedMode %>`,
+            TimeSignatureBottomValue:`<%- CurrentSongData.TimeSignatureBottomValue %>`,
+            TimeSignatureTopValue:`<%- CurrentSongData.TimeSignatureTopValue %>`,
+            TransposeKey:`<%- CurrentSongData.TransposeKey %>`,
 
         }
 
