Added the freemium dashboard

--- a/views/EditSongPanelFreemium.ejs
+++ b/views/EditSongPanelFreemium.ejs
@@ -231,8 +231,8 @@
             <div class="container mt-3" style="text-align: center;" id="GenerateVideoContainer">
                 <button type="button" class="btn btn-outline-dark" id="GenerateVideo" onclick="FetchFiles()">Generate Video</button>
                 <button type="button" class="btn btn-outline-dark" id="PreviewAudioOnlyID" onclick="PreviewAudioOnly()">Preview Audio</button>
-                <button type="button" class="btn btn-outline-dark" id="AdvancedMode"
-                    onclick="AdvancedMode()">AdvancedMode</button>
+                <!-- <button type="button" class="btn btn-outline-dark" id="AdvancedMode"
+                    onclick="AdvancedMode()">AdvancedMode</button> -->
                 <!-- <button type="button" class="btn btn-outline-dark" id="AdvancedModeApply" onclick="AdvancedModeApply()" style="display: none;">Apply</button> -->
                 <button type="button" class="btn btn-outline-dark" id="AdvancedModeExit" onclick="AdvancedModeExit()"
                     style="display: none;">Exit</button>
@@ -353,7 +353,7 @@
         integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-    <script src="/tool/app-functionality.js"></script>
+    <script src="/tool/app-functionality-freemium.js"></script>
     <script src="/tool/script.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
