--- a/views/Dashboard.ejs
+++ b/views/Dashboard.ejs
@@ -71,7 +71,7 @@
 
             </div>
             <div class="col-sm-6">
-                <div class="box">
+                <div class="box" onclick="window.location.href = '/profile'">
                     Profile
                 </div>
 
