--- a/views/EditSongPanel.ejs
+++ b/views/EditSongPanel.ejs
@@ -218,7 +218,7 @@
 
             
 
-            <div class="container mt-3" style="text-align: right;">
+            <!-- <div class="container mt-3" style="text-align: right;">
                 <input type="radio" class="btn-check" name="VideoType" value="handmade" id="Handmade" autocomplete="off"
                     checked onclick="SetVideoType()" onchange="SetVideoType()">
                 <label class="btn btn-outline-success" for="Handmade">Realistic</label>
@@ -227,7 +227,7 @@
                     onclick="SetVideoType()" onchange="SetVideoType()">
                 <label class="btn btn-outline-success" for="Animated">Animated</label>
 
-            </div>
+            </div> -->
             <div class="container mt-3" style="text-align: center;" id="GenerateVideoContainer">
                 <button type="button" class="btn btn-outline-dark" id="GenerateVideo" onclick="FetchFiles()">Generate Video</button>
                 <button type="button" class="btn btn-outline-dark" id="PreviewAudioOnlyID" onclick="PreviewAudioOnly()">Preview Audio</button>
